...
//

enum Inscriptions {
    static let addNewProductVCStoryBoardID = "addNewProductVC"
    static let unwindToProductInfoSegueID = "unwindToProductInfo"
    static let productInfoCollectionViewReuseID = "ProductInfoCollectionViewCell"
    static let tabBarItemLeftTitle = "Как варить"
    static let tabBarItemRightTitle = "Недавние"
    static let barCodeAlertTitle = "Хьюстон, у нас проблемы"
    // swiftlint:disable:next line_length
    static let barCodeAlertMessage = "Кажется, данного продукта еще нет в базе, вы можете нам помочь и добавить его вручную"
    static let barCodeAlertButtonOkTitle = "Добавить"
    static let barCodeAlertButtonCancelTitle = "Потом"
    static let identifierOfTimerNotification = "timer"
...
