...
    private func setupNavigationBar() {
        let image = UIImage(systemName: "timer")
        let timerButton = UIBarButtonItem(image: image,
                                          style: .plain,
                                          target: self,
                                          action: #selector(timerBarButtonTapped))
        timerButton.accessibilityLabel = "timerNavButton"
        timerButton.tintColor = .systemGray
        navigationItem.rightBarButtonItems = [timerButton]
    }
    
    @objc private func centerButtonAction(sender: UIButton) {
        sender.animationForMiddleButton()
...
